<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.tfw-org</groupId>
    <artifactId>tfw</artifactId>
    <version>2024.3-SNAPSHOT</version>

    <name>tfw</name>
    <description>The FrameWork for building highly scalable and maintainable applications</description>

    <properties>
        <maven.compiler.release>8</maven.compiler.release>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.exclusions>src/main/java/tfw/math/BigDecimal.java,
            src/main/java/tfw/math/BigInteger.java,
            src/main/java/tfw/math/BitSieve.java,
            src/main/java/tfw/math/DoubleConsts.java,
            src/main/java/tfw/math/FloatConsts.java,
            src/main/java/tfw/math/MathContext.java,
            src/main/java/tfw/math/MutableBigInteger.java,
            src/main/java/tfw/math/RoundingMode.java,
            src/main/java/tfw/math/SignedMutableBigInteger.java</sonar.exclusions>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>tfw-org</sonar.organization>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.11</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <quiet>true</quiet>
                    <doclint>all</doclint>
                    <failOnWarnings>true</failOnWarnings>
                    <failOnError>true</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <doclint>none</doclint>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all,-options,-path</arg>
                        <arg>-XDcompilePolicy=simple</arg>
                        <arg>-Xplugin:ErrorProne \
                        -XepAllErrorsAsWarnings</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.errorprone</groupId>
                            <artifactId>error_prone_core</artifactId>
                            <version>2.24.1</version>
                        </path>
                        <!-- Other annotation processors go here.

                            If 'annotationProcessorPaths' is set, processors will no longer be
                            discovered on the regular -classpath; see also 'Using Error Prone
                            together with other annotation processors' below. -->
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.42.0</version>
                <configuration>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                        <excludes>
                            <exclude>src/main/java/tfw/math/BigDecimal.java</exclude>
                            <exclude>src/main/java/tfw/math/BigInteger.java</exclude>
                            <exclude>src/main/java/tfw/math/BitSieve.java</exclude>
                            <exclude>src/main/java/tfw/math/DoubleConsts.java</exclude>
                            <exclude>src/main/java/tfw/math/FloatConsts.java</exclude>
                            <exclude>src/main/java/tfw/math/MathContext.java</exclude>
                            <exclude>src/main/java/tfw/math/MutableBigInteger.java</exclude>
                            <exclude>src/main/java/tfw/math/RoundingMode.java</exclude>
                            <exclude>src/main/java/tfw/math/SignedMutableBigInteger.java</exclude>
                        </excludes>
                        <palantirJavaFormat>
                            <version>2.32.0</version>
                            <style>PALANTIR</style>
                        </palantirJavaFormat>
                    </java>
                    <pom>
                        <includes>
                            <include>pom.xml</include>
                        </includes>
                        <sortPom>
                            <encoding>${project.build.sourceEncoding}</encoding>
                            <lineSeparator>\n</lineSeparator>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <predefinedSortOrder>custom_1</predefinedSortOrder>
                            <sortDependencies>scope</sortDependencies>
                            <sortProperties>true</sortProperties>
                        </sortPom>
                    </pom>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <mainClass>tfw.build.SearchAndReplace</mainClass>
                    <arguments>
                        <argument>./src/main/template</argument>
                        <argument>./src/test/template</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>3.21.2</version>
                <configuration>
                    <excludes>
                        <exclude>tfw/math/BigDecimal.java</exclude>
                        <exclude>tfw/math/BigInteger.java</exclude>
                        <exclude>tfw/math/BitSieve.java</exclude>
                        <exclude>tfw/math/DoubleConsts.java</exclude>
                        <exclude>tfw/math/FloatConsts.java</exclude>
                        <exclude>tfw/math/MathContext.java</exclude>
                        <exclude>tfw/math/MutableBigInteger.java</exclude>
                        <exclude>tfw/math/RoundingMode.java</exclude>
                        <exclude>tfw/math/SignedMutableBigInteger.java</exclude>
                    </excludes>
                    <linkXRef>false</linkXRef>
                    <failOnViolation>true</failOnViolation>
                    <failurePriority>2</failurePriority>
                    <maxAllowedViolations>5</maxAllowedViolations>
                    <format>txt</format>
                    <includeTests>true</includeTests>
                    <minimumTokens>100</minimumTokens>
                    <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                    <targetJdk>${maven.compiler.target}</targetJdk>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.15.4</version>
                <configuration>
                    <targetClasses>
                        <param>tfw*</param>
                    </targetClasses>
                    <targetTests>
                        <param>tfw*</param>
                    </targetTests>
                    <excludedClasses>
                        <param>tfw.math*</param>
                    </excludedClasses>
                    <features>
                        <feature>+auto_threads</feature>
                    </features>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>1.2.1</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <url>https://github.com/tfw-org/tfw</url>
    <inceptionYear>2005</inceptionYear>

    <organization>
        <name>TheFrameWork</name>
        <url>https://github.com/tfw-org</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>David Cover</name>
            <email>david_cover@alum.drexel.edu</email>
            <organization>TFW</organization>
            <organizationUrl>https://github.com/tfw-org</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/tfw-org/tfw.git</connection>
        <developerConnection>scm:git:https://github.com/tfw-org/tfw.git</developerConnection>
        <url>https://github.com/tfw-org/tfw</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/tfw-org/tfw/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.11</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <phase>prepare-package</phase>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                        <format>HTML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <phase>verify</phase>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
